--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html
 
 body
 {
-    /* border: 3px solid red; */
+    border: 3px solid red;
     height: 100%;
     overflow-y: auto;
     background-color: #252422;
@@ -22,7 +22,7 @@ body
 
 header
 {
-    /* border: 3px solid blue; */
+    border: 3px solid blue;
     height: 10%;
     width: 100%;
     background-color: #403D39;
@@ -36,7 +36,7 @@ header
 {
     text-decoration: none;
     color: whitesmoke;
-    /* border: 2px solid pink; */
+    border: 2px solid pink;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +46,7 @@ header
 /* This is the title and logo container */
 .title-logo
 {
-    /* border: 2px solid green; */
+    border: 2px solid green;
     height: 100%;
     display: flex;
     align-items: center;
@@ -66,7 +66,7 @@ header
 
 .main_home
 {
-    /* border: 3px solid green; */
+    border: 3px solid green;
     height: 90%;
     padding: 0.5rem 0;
     font-family: 'quicksand', serif;
@@ -81,7 +81,7 @@ header
 
 .line1
 {
-    /* border: 3px solid red; */
+    border: 3px solid red;
     width: 100%;
     height: max-content;
     padding: 30px 0;
@@ -95,14 +95,14 @@ header
     color: whitesmoke;
     display: inline-block;
     width: max-content;
-    /* border: 3px solid hotpink; */
+    border: 3px solid hotpink;
     padding: 10px;
 }
 
 
 .movie_image_holder
 {
-    /* border: 3px solid gold; */
+    border: 3px solid gold;
     height: max-content;
     width: 30dvh;
     margin: 10px 0;
@@ -140,7 +140,7 @@ header
 /* Movie Pages desgin  */
 .movie_main
 {
-    /* border: 2px solid purple; */
+    border: 2px solid purple;
     height: 100%;
     display: flex;
     flex-direction: column;
