--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html
 
 body
 {
-    border: 3px solid red;
+    /* border: 3px solid red; */
     height: 100%;
     overflow-y: auto;
     background-color: #252422;
@@ -22,31 +22,33 @@ body
 
 header
 {
-    border: 3px solid blue;
-    height: 10%;
+    /* border: 3px solid blue; */
+    height: 12.5%;
     width: 100%;
     background-color: #403D39;
     padding: 0 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav_links
 {
     text-decoration: none;
     color: whitesmoke;
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+    height: 40px;
 }
 
 /* This is the title and logo container */
 .title-logo
 {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     height: 100%;
     display: flex;
     align-items: center;
@@ -66,7 +68,7 @@ header
 
 .main_home
 {
-    border: 3px solid green;
+    /* border: 3px solid green; */
     height: 90%;
     padding: 0.5rem 0;
     font-family: 'quicksand', serif;
@@ -74,14 +76,9 @@ header
 }
 
 /* Main section for all movies. */
-.main_movie
-{
-    border: red 3px solid;
-}
-
 .line1
 {
-    border: 3px solid red;
+    /* border: 3px solid red; */
     width: 100%;
     height: max-content;
     padding: 30px 0;
@@ -95,14 +92,14 @@ header
     color: whitesmoke;
     display: inline-block;
     width: max-content;
-    border: 3px solid hotpink;
+    /* border: 3px solid hotpink; */
     padding: 10px;
 }
 
 
 .movie_image_holder
 {
-    border: 3px solid gold;
+    /* border: 3px solid gold; */
     height: max-content;
     width: 30dvh;
     margin: 10px 0;
@@ -140,25 +137,52 @@ header
 /* Movie Pages desgin  */
 .movie_main
 {
-    border: 2px solid purple;
-    height: 100%;
+    /* border: 2px solid purple; */
+    height: max-content;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding: 20px 10px;
 }
 
 .h1_movie_title
 {
-    margin-top: 20px;
+    font-size: 3rem;
+    margin: 15px 0;
     font-family: 'Titillium Web', 'san-serif';
 }
 
-.download_link
+.text
+{
+    font-size: 1.1rem;
+    font-family: 'Quicksand', serif;
+}
+
+/* General Styles */
+.buttons_div {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.download_link_holder, .buttons_div
+{
+    /* border: 3px solid green; */
+    width: max-content;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    width: 300px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.download_link, .buttons_div_button
 {
     text-decoration: none;
     background-color: #EB5E28;
-    padding: 15px 20px;
+    padding: 10px 30px;
     border-radius: 10px;
     margin-top: 10px;
     font-family: 'quicksand', serif;
@@ -166,7 +190,74 @@ header
     font-size: 1.2rem;
     text-transform: uppercase;
     color: black;
+    border: none;
+    cursor: pointer;
 }
 
+.download_link:hover, .buttons_div_button:hover
+{
+    background-color: rgba(235, 95, 40, 0.76);
+}
 
+.download_link:active, .buttons_div_button:active
+{
+    cursor: wait;
+}
 
+.movie_frame {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    aspect-ratio: 16/9;
+    border: 2px solid white;
+}
+
+footer
+{
+    width: 100%;
+    height: 12.5%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .title, .fa-film {
+        font-size: 1.3rem;
+    }
+
+    .h1_movie_title {
+        font-size: 2rem;
+        margin: 15px 0;
+    }
+
+    .download_link, .buttons_div_button{
+        font-size: 14px;
+    }
+
+    .buttons_div_button{
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .title {
+        font-size: 24px;
+    }
+
+    .h1_movie_title {
+        font-size: 3rem;
+        margin: 15px 0;
+    }
+
+    .download_link, .buttons_div_button {
+        font-size: 18px;
+    }
+
+    .buttons_div_button{
+        font-size: 18px;
+    }
+}
