Removed the purple border in the Movie.html

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ header
 /* Movie Pages desgin  */
 .movie_main
 {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     height: max-content;
     display: flex;
     flex-direction: column;
@@ -379,7 +379,6 @@ footer
 
     .movie_main
     {
-        border: 2px solid purple;
         height: 3000px;
         display: flex;
         flex-direction: column;
