--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ header
 }
 
 /* Movie Pages desgin  */
-.movie_main
+.movie_main, .serie_main
 {
     height: max-content;
     display: flex;
@@ -158,7 +158,7 @@ header
     padding: 20px 10px;
 }
 
-.h1_movie_title
+.h1_movie_title, .h1_serie_title
 {
     font-size: 3rem;
     margin: 15px 0;
@@ -218,13 +218,64 @@ header
     cursor: wait;
 }
 
-.movie_frame {
+.movie_frame, .serie_frame {
     width: 100%;
     max-width: 800px;
     height: auto;
     aspect-ratio: 16/9;
     border: 2px solid white;
 }
+
+/* Styling the Series Webpage */
+.serie_links_holder
+{
+    width: 90%;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+}
+
+.season_number_class
+{
+    font-size: 2.5rem;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.serie_button_class
+{
+    border: 2px solid #EB5E28;
+    outline: none;
+    font-size: 1.2rem;
+    margin: 20px 0;
+    width: 100%;
+    height: 50px;
+    background-color: transparent;
+    color: white;
+    text-align: left;
+    cursor: pointer;
+    transition: all 0.2s;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    font-family: 'Quicksand', sans-serif;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.serie_button_class:hover
+{
+    background-color: #EB5E28;
+    color: black;
+}
+
+.serie_button_class:active
+{
+    background-color: transparent;
+    color: #EB5E28;
+    border: 2px solid transparent;
+}
+
 
 footer
 {
@@ -237,13 +288,14 @@ footer
     padding: 20px 0;
 }
 
+
 /* Responsive Design */
 @media (max-width: 768px) {
     .title, .fa-film {
         font-size: 1.3rem;
     }
 
-    .h1_movie_title {
+    .h1_movie_title, .h1_serie_title {
         font-size: 2rem;
         margin: 15px 0;
     }
@@ -303,7 +355,10 @@ footer
         margin: 10px 0;
     }
 
-
+    .serie_button_class
+    {
+        font-size: 0.85rem;
+    }
 }
 
 
@@ -325,7 +380,7 @@ footer
         font-size: 1.2rem;
     }
 
-    .h1_movie_title {
+    .h1_movie_title, .h1_serie_title {
         font-size: 2.5rem;
         margin: 15px 0;
     }
@@ -381,7 +436,7 @@ footer
         font-size: 5rem;
     }
 
-    .movie_main
+    .movie_main, .serie_frame
     {
         height: 3000px;
         display: flex;
@@ -390,13 +445,13 @@ footer
         padding: 20px 10px;
     }
 
-    .movie_frame
+    .movie_frame, .serie_frame
     {
         margin-top: 300px;
         transform: scale(2.25);
     }
 
-    .h1_movie_title
+    .h1_movie_title, .h1_serie_title
     {
         margin-top: 350px;
         font-size: 8rem;
