--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@ header
 {
     border: 2px solid #EB5E28;
     outline: none;
+    text-transform: capitalize;
     font-size: 1.2rem;
     margin: 20px 0;
     width: 100%;
