--- a/style.css
+++ b/style.css
@@ -69,10 +69,9 @@ header
 .main_home
 {
     /* border: 3px solid green; */
-    height: 90%;
-    padding: 0.5rem 0;
+    height: max-content;
+    padding: 0.5rem 1.5rem;
     font-family: 'quicksand', serif;
-    margin: 0 3rem;
 }
 
 .category_heading
@@ -277,13 +276,133 @@ header
     border: 2px solid transparent;
 }
 
+/* This is for the Contact link from index file */
+.movie_contact
+{
+    /* border: 3px solid green; */
+    height: max-content;
+    padding: 0.5rem 1.5rem;
+    font-family: 'quicksand', serif;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;   
+}
+
+form
+{
+    width: 90%;
+    height: max-content;
+}
+
+.form_divisions
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column; 
+    padding: 0.5rem 0;
+}
+
+.contact_labels
+{
+    font-size: 1.5rem;
+}
+
+#name, #email, #subject
+{
+    width: 100%;
+    height: 20px;
+    padding: 1.8rem 0.5rem;
+    font-size: 1.2rem;
+    background-color: transparent;
+    border-bottom: 2px solid #ff7640;
+    color: white;
+    outline: none;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    font-family: 'quicksand', serif;
+}
+
+#message
+{
+    font-family: 'quicksand', serif;
+    padding: 1.8rem 0.5rem;
+    font-size: 1.2;
+    width: 100%;
+    min-height: 150px;
+    background-color: transparent;
+    border-bottom: 2px solid #ff7640;
+    color: white;
+    outline: none;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+}
+
+/* This is for the Contact page */
+.submit_link
+{
+    text-decoration: none;
+    border: none;
+    outline: none;
+    text-align: center;
+    color: black;
+    padding: 15px 30px;
+    background-image: linear-gradient(45deg,#EB5E28 50%, #ff7640 50%);
+    font-size: 1.5rem;
+    font-weight: bolder;
+    margin-top: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-family: 'quicksand', serif;
+}
+
+.submit_link:hover
+{
+    transform: scale(1.03);
+}
+
+.submit_link:active
+{
+    transform: scale(1);
+}
+.contact_link
+{
+    font-family: 'quicksand', serif;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    padding: 15px 30px;
+    background-image: linear-gradient(45deg,#EB5E28 50%, #ff7640 50%);
+    font-size: 1.5rem;
+    font-weight: bolder;
+    margin-top: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.contact_link:hover
+{
+    transform: scale(1.1);
+}
+
+.contact_link:active
+{
+    transform: scale(1);
+}
+
+
 
 footer
 {
     width: 100%;
-    height: 50px;
+    height: max-content;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 20px 0;
@@ -292,6 +411,17 @@ footer
 
 /* Responsive Design */
 @media (max-width: 768px) {
+
+    #message, #name, #email, #subject
+    {
+        font-size: 0.75rem;
+    }
+
+    .contact_labels
+    {
+        font-size: 1rem;
+    }
+
     .title, .fa-film {
         font-size: 1.3rem;
     }
@@ -324,8 +454,7 @@ footer
 
     .main_home
     {
-        /* padding: 10px 10px; */
-        margin: 0 10px;
+        padding: 0.5rem 1rem;   
     }
 
     /* Movie information */
