--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body
     overflow-y: auto;
     background-color: #252422;
     color: whitesmoke;
+    position: relative;
 }
 
 header
@@ -426,6 +427,57 @@ form
     margin: 25px 0;
 }
 
+/* Pop up for movie site */
+#pop_Ad
+{
+    /* border : 3px solid red; */
+    position : absolute;
+    top : 50%;
+    left : 50%;
+    width : 95%;
+    height : max-content;
+    transform : translate(-50%, -50%);
+    background-color : #403D39;
+    padding: 20px 2.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#par_ad_title
+{
+    padding: 20px 0;
+    font-size: 2rem;
+    font-family: 'quicksand', serif;
+    font-weight: bolder;
+}
+
+/* Button holder for container */
+#button_container
+{
+    /* border: 3px solid red; */
+    width : 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#button_close, #button_ad_redirect
+{
+    text-decoration: none;
+    border: none;
+    outline: none;
+    text-align: center;
+    color: black;
+    padding: 10px 20px;
+    background-image: linear-gradient(45deg,#EB5E28 50%, #ff7640 50%);
+    font-size: 1.2rem;
+    font-weight: bolder;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-family: 'quicksand', serif;
+}
 
 footer
 {
@@ -442,6 +494,21 @@ footer
 
 /* Responsive Design */
 @media (max-width: 768px) {
+
+    #button_close, #button_ad_redirect
+    {
+        padding: 5px 10px;
+        font-size: 1rem;
+        width: max-content;
+        margin: 10px 0;
+    }
+
+    #button_container
+    {
+        align-items: center;
+        flex-direction: column;
+    }
+
 
     #id_redirect
     {
