--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ header
 /* Styling the Series Webpage */
 .serie_links_holder
 {
-    width: 90%;
+    width: 95%;
     height: max-content;
     display: flex;
     flex-direction: column;
@@ -282,7 +282,7 @@ header
     text-transform: capitalize;
     font-size: 1.2rem;
     margin: 20px 0;
-    width: 100%;
+    width: 90%;
     height: 50px;
     background-color: transparent;
     color: white;
@@ -309,6 +309,27 @@ header
     background-color: transparent;
     color: #EB5E28;
     border: 2px solid transparent;
+}
+
+.series_download_links
+{
+    width: 10%;
+    background-color: #EB5E28;
+    color: #000000;
+    text-decoration: none;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    
+}
+
+.link_box
+{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 /* This is for the Contact link from index file */
